--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test:coverage": "vitest run --coverage"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@tailwindcss/typography": "^0.5.19",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
