--- a/package.json
+++ b/package.json
@@ -13,12 +13,15 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
+    "@react-three/fiber": "^9.4.2",
     "@tailwindcss/typography": "^0.5.19",
+    "@types/three": "^0.182.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.10.1"
+    "react-router-dom": "^7.10.1",
+    "three": "^0.182.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
